test-app/echoserver_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: echoserver
  name: echoserver
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: echoserver
  sessionAffinity: None
  type: NodePort
