test-app/echoserver_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: echo.sbux.k8s.work
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echoserver
          servicePort: 8080
